# departureboards

./: .babelrc  .dockerignore  .gitignore  .npmignore  APKBUILD  CODE_OF_CONDUCT.md  Dockerfile  Jenkinsfile  Makefile.in  README.md  SubMakefile.in  build.sh  configure  configure.ac  configure.lineno  minifycss.sh  package-lock.json  package.json  pom.xml  shovel  todo.list  webpack.config.js
css/: App.css  coach.css  ldb.css  media-1023.css  media-1599.css  media-1600.css  media-320.css  media-443.css  media-640.css  service.css
departureboards-api/: pom.xml
departureboards-core/: nb-configuration.xml  pom.xml
departureboards-service/: pom.xml
departureboards-site/: pom.xml
docker/: Dockerfile  pom.xml
font/: Uktrain.sfd
include/nre/: reference.h  schedule.h
lib/: Makefile.in
lib/api/: boards.c  status.c
lib/reference/: import.c  normal.c
lib/schedule/: expire.c  free.c  import.c  index.c  lock.c  updateStatus.c
public/: index.html  ldb.css  mobile.css  react-typeahead.js
public_html/css/: mobile.css
public_html/js/: departure.js
src/: App.css  App.js  Boards.js  Departureboards.js  EUCookie.js  Navigation.js  Stations.js  Train.js  index.html  index.js
src/about/: About.js  ReleaseNotes.js
src/boards/: BoardRow.js  Boards.js  Loading.js  ManagedBy.js  MessageRow.js
src/config/: Config.js  ConfigBoards.js  ConfigNetwork.js  ConfigPage.js  ConfigService.js  ConfigSystem.js
src/contactUs/: ContactUs.js
src/css/: App.css  Config.css  ldb.css  media.css
src/home/: HomePage.js
web/: Gruntfile.js  README.md  bower.json  package.json
(+102 files in other folders)
